<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#FFBB33"
        android:gravity="center"
        android:text="@string/them_lop_moi"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtMaLop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/nhap_ma_lop" />

    <EditText
        android:id="@+id/edtTenLop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/nhap_ten_lop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@null"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#777373"
            android:text="@string/xoa_trang"/>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@null"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#58E48B"
            android:text="@string/them_lop"/>
    </LinearLayout>
</LinearLayout>
