<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center"
    android:id="@+id/root">

    <TextView
        android:text="@string/quan_ly_sinh_vien"
        android:textSize="36sp"
        android:gravity="center"
        android:textColor="#FF0000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnAddClasses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#00FF05"
        android:text="@string/them_lop"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/btnClassesManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#007CFF"
        android:text="@string/xem_danh_sach_lop"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/btnStudentManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#FF4901"
        android:text="@string/quan_ly_sinh_vien"
        app:backgroundTint="@null" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"/>

</LinearLayout>